--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,19 @@
-#DataSource
 spring:
-  datasource:
-    url:
-    username:
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    show-sql: true
+    show-sql: true    # sql 쿼리 출력
+    properties:
+      hibernate:
+        format_sql: true    # sql 예쁘게 출력하기
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+
+    hikari:
+      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
+
+  h2:
+    console:
+      enabled: true
