--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # submodule에 있는 파일 최신으로 업데이트
+      - name: Update Submodule
+        run: git submodule update --init --recursive
+
       - name: Build with Gradle
         run: ./gradlew clean build
