--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_ed25519.pub
+          chmod 600 ~/.ssh/id_ed25519.pub
+          ssh-add ~/.ssh/id_ed25519.pub
+
       # submodule에 있는 파일 최신으로 업데이트
       - name: Update Submodule
         run: git submodule update --init --recursive
@@ -77,3 +84,7 @@ jobs:
           --file-exists-behavior OVERWRITE
           --s3-location bucket=profileem-backend,bundleType=zip,key=profileem.zip
           --region ap-northeast-2
+
+
+  env:
+    SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
