--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,19 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_ed25519.pub
+          chmod 600 ~/.ssh/id_ed25519.pub
+          ssh-add ~/.ssh/id_ed25519.pub
+
       # submodule에 있는 파일 최신으로 업데이트
       - name: Update Submodule
         run: git submodule update --init --recursive
 
       - name: Build with Gradle
         run: ./gradlew clean build
+
+  env:
+    SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
