--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_ed25519.pub
           chmod 600 ~/.ssh/id_ed25519.pub
+          eval $(ssh-agent -s)
           ssh-add ~/.ssh/id_ed25519.pub
 
       # submodule에 있는 파일 최신으로 업데이트
