--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 env:
-  SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
   S3_BUCKET_NAME: profileem-backend
 
 jobs:
@@ -27,10 +27,10 @@ jobs:
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_ed25519.pub
-          chmod 600 ~/.ssh/id_ed25519.pub
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           eval $(ssh-agent -s)
-          ssh-add ~/.ssh/id_ed25519.pub
+          ssh-add ~/.ssh/id_ed25519
 
       # submodule에 있는 파일 최신으로 업데이트
       - name: Update Submodule
