feat: kakao login

--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'javax.xml.bind:jaxb-api:2.3.0' // DatatypeConverter 오류
 
 	// QR코드 생성 라이브러리 의존성 추가
 	implementation 'com.google.zxing:core:3.4.1'
 	implementation 'com.google.zxing:javase:3.4.1'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	compileOnly 'org.projectlombok:lombok'
 
