--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,10 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'com.google.code.gson:gson:2.10.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.0' // DatatypeConverter 오류
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// QR코드 생성 라이브러리 의존성 추가
 	implementation 'com.google.zxing:core:3.4.1'
